# DitanBackend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.Docker.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: README  env.py
alembic/versions/: 001_add_sanzhen_image_urls.py
app/: __init__.py
app/api/: __init__.py  chat.py  deps.py  doctor.py  patient.py  router.py
app/core/: __init__.py  auth.py  config.py  database.py  exceptions.py  logging.py
app/models/: __init__.py  chat.py  doctor.py  enums.py  medical.py  patient.py
app/schemas/: __init__.py  chat.py  common.py  doctor.py  patient.py
app/services/: __init__.py  chat_service.py  openai_client.py  prompt_templates.py  tcm_diagnosis_service.py
demo/mini-tcm/: mini_tcm_demo.py  openai_chat.py  prompt_template.py  transcript.txt
demo/mini-tcm/output/: single_result.json
demo/test_diagnosis_100_sample/: data.xlsx  main.py  output.xlsx  output_comparison.xlsx
docs/: API.md  DATABASE.md  DATABASE_RESET_GUIDE.md  DEPLOYMENT.md  QUICKREF.md  QUICKSTART.md
scripts/: __init__.py  cicd_workflow.yml  deploy.ps1  deploy.sh  docker_build.ps1  docker_build.sh  generate_jwt_secret.py  init_db.py  manage_db.ps1  manage_db.sh  run_dev.py  run_tests.py
tests/: conftest.py  test_chat.py  test_doctor.py  test_patient.py  test_patient_new.py  test_stream_diagnosis.py
